--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,19 @@
 name = "SpinModels"
-uuid = "5a49041c-cc3f-4ac7-a79f-4c6c84dac572"
+uuid = "88a46c5d-b766-4f50-a717-9e2d8739cc37"
 authors = ["Adrian Braemer <11058200+abraemer@users.noreply.github.com> and contributors"]
 version = "0.1.0"
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "1.8"
 
 [extras]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Random", "Pkg"]
