--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       
       - name: Setup Julia environment
-        uses: julia-actions/setup-julia@v1
+        uses: julia-actions/setup-julia@v4
         with:
-          version: 1.8.0
+          version: 1 # current version
       
       - name: Run Julia package tests
         uses: julia-actions/julia-runtest@latest
@@ -38,7 +38,7 @@ jobs:
       - uses: julia-actions/julia-processcoverage@latest
       
       - name: Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
         with:
           file: lcov.info
           flags: unittests
